--- a/sdk/pullrequest.yml
+++ b/sdk/pullrequest.yml
@@ -20,6 +20,6 @@ parameters:
     default: auto
 
 extends:
-  template: ../eng/pipelines/templates/stages/archetype-sdk-client.yml
+  template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: ${{ parameters.Service }}
