work around the commonjs build error related to "long"

--- a/sdk/servicebus/service-bus/tsconfig.json
+++ b/sdk/servicebus/service-bus/tsconfig.json
@@ -13,14 +13,13 @@
       ]
     },
     "moduleResolution": "NodeNext",
-    "rootDir": "."
+    "rootDir": ".",
+    "skipLibCheck": true
   },
   "exclude": [
     "node_modules",
     "./types/**/*.d.ts",
     "./samples/**/*.ts",
-    "test/perf-js-libs/*",
-    "test/perf/track-1",
     "test/stress*"
   ],
   "include": [
