--- a/sdk/servicebus/service-bus/package.json
+++ b/sdk/servicebus/service-bus/package.json
@@ -88,15 +88,15 @@
   },
   "dependencies": {
     "@azure/abort-controller": "^2.1.2",
-    "@azure/core-amqp": "^4.2.2",
-    "@azure/core-auth": "^1.3.0",
-    "@azure/core-client": "^1.7.0",
-    "@azure/core-paging": "^1.4.0",
-    "@azure/core-rest-pipeline": "^1.14.0",
-    "@azure/core-tracing": "^1.0.0",
-    "@azure/core-util": "^1.1.1",
-    "@azure/core-xml": "^1.0.0",
-    "@azure/logger": "^1.0.0",
+    "@azure/core-amqp": "^4.3.2",
+    "@azure/core-auth": "^1.8.0",
+    "@azure/core-client": "^1.9.2",
+    "@azure/core-paging": "^1.6.2",
+    "@azure/core-rest-pipeline": "^1.17.0",
+    "@azure/core-tracing": "^1.1.2",
+    "@azure/core-util": "^1.10.0",
+    "@azure/core-xml": "^1.4.3",
+    "@azure/logger": "^1.1.4",
     "@types/is-buffer": "^2.0.0",
     "buffer": "^6.0.0",
     "is-buffer": "^2.0.3",
@@ -104,7 +104,7 @@
     "long": "^5.2.0",
     "process": "^0.11.10",
     "rhea-promise": "^3.0.0",
-    "tslib": "^2.2.0"
+    "tslib": "^2.7.0"
   },
   "devDependencies": {
     "@azure-tools/test-credential": "^2.0.0",
@@ -114,13 +114,16 @@
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@azure/identity": "^4.2.1",
     "@microsoft/api-extractor": "^7.31.1",
+    "@types/chai-as-promised": "^8.0.1",
     "@types/debug": "^4.1.4",
     "@types/node": "^18.0.0",
-    "@types/sinon": "^17.0.0",
     "@types/uuid": "^8.0.0",
     "@types/ws": "^7.2.4",
     "@vitest/browser": "^2.0.5",
     "@vitest/coverage-istanbul": "^2.0.5",
+    "chai": "^5.1.1",
+    "chai-as-promised": "^8.0.0",
+    "chai-exclude": "^3.0.0",
     "cross-env": "^7.0.2",
     "debug": "^4.1.1",
     "dotenv": "^16.0.0",
