--- a/sdk/servicebus/service-bus/tsconfig.browser.config.json
+++ b/sdk/servicebus/service-bus/tsconfig.browser.config.json
@@ -1,7 +1,7 @@
 {
   "extends": "./.tshy/build.json",
-  "include": ["./src/**/*.ts", "./src/**/*.mts", "./test/**/*.ts"],
-  "exclude": ["./test/**/node/**/*.ts", "./test/stress*"],
+  "include": ["src/**/*.ts", "src/**/*.mts", "test/**/*.ts"],
+  "exclude": ["test/**/node/**/*.ts", "test/stress*", "test/internal/connectionManagement.spec.ts"],
   "compilerOptions": {
     "outDir": "./dist-test/browser",
     "rootDir": ".",
