Split public and INT environment tests.

--- a/sdk/communication/communication-sms/tests.yml
+++ b/sdk/communication/communication-sms/tests.yml
@@ -7,18 +7,14 @@ extends:
       ServiceDirectory: communication
       CloudConfig:
         Public:
+          ServiceConnection: azure-sdk-tests
+          SubscriptionConfigurationFilePaths:
+            - eng/common/TestResources/sub-config/AzurePublicMsft.json
           SubscriptionConfigurations:
             - $(sub-config-azure-cloud-test-resources)
             - $(sub-config-communication-services-cloud-test-resources-common)
             - $(sub-config-communication-services-cloud-test-resources-js)
             - $(sub-config-communication-services-sms-cloud-test-resources)
-        Int:
-          SubscriptionConfigurations:
-            - $(sub-config-communication-int-test-resources-common)
-            - $(sub-config-communication-int-test-resources-js)
-            - $(sub-config-communication-sms-int-test-resources)
-          MatrixFilters:
-            - TestType=^(?!(browser|sample)).*
-      Clouds: Public,Int
+      Clouds: Public
       TestResourceDirectories:
         - communication/test-resources/
