--- a/sdk/eventhub/event-hubs/package.json
+++ b/sdk/eventhub/event-hubs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@azure/event-hubs",
   "sdk-type": "client",
-  "version": "5.13.0-beta.3",
+  "version": "5.12.1",
   "description": "Azure Event Hubs SDK for JS.",
   "author": "Microsoft Corporation",
   "license": "MIT",
@@ -103,7 +103,7 @@
   },
   "dependencies": {
     "@azure/abort-controller": "^2.1.2",
-    "@azure/core-amqp": "4.4.0-beta.1",
+    "@azure/core-amqp": "^4.3.2",
     "@azure/core-auth": "^1.3.0",
     "@azure/core-tracing": "^1.1.2",
     "@azure/core-util": "^1.9.1",
