- Address CR feedback
- Disable min/max tests as it doesn't support custom config well

--- a/sdk/servicebus/service-bus/tests.yml
+++ b/sdk/servicebus/service-bus/tests.yml
@@ -5,6 +5,8 @@ extends:
     parameters:
       PackageName: "@azure/service-bus"
       ServiceDirectory: servicebus
+      MatrixFilters:
+        - DependencyVersion=^$
       UseFederatedAuth: true
       TimeoutInMinutes: 120
       Clouds: 'Public,Canary'
