--- a/sdk/servicebus/service-bus/package.json
+++ b/sdk/servicebus/service-bus/package.json
@@ -143,7 +143,8 @@
   "tshy": {
     "exports": {
       "./package.json": "./package.json",
-      ".": "./src/index.ts"
+      ".": "./src/index.ts",
+      "./experimental": "./src/experimental/index.ts"
     },
     "dialects": [
       "esm",
@@ -173,6 +174,24 @@
       "require": {
         "types": "./dist/commonjs/index.d.ts",
         "default": "./dist/commonjs/index.js"
+      }
+    },
+    "./experimental": {
+      "browser": {
+        "types": "./dist/browser/experimental/index.d.ts",
+        "default": "./dist/browser/experimental/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/experimental/index.d.ts",
+        "default": "./dist/react-native/experimental/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/experimental/index.d.ts",
+        "default": "./dist/esm/experimental/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/experimental/index.d.ts",
+        "default": "./dist/commonjs/experimental/index.js"
       }
     }
   }
