--- a/sdk/appconfiguration/app-configuration/tsconfig.json
+++ b/sdk/appconfiguration/app-configuration/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "downlevelIteration": true,
     "paths": {
-      "@azure/app-configuration": [
-        "./src/index"
-      ]
+      "@azure/app-configuration": ["./src/index"]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
