--- a/sdk/appconfiguration/app-configuration/package.json
+++ b/sdk/appconfiguration/app-configuration/package.json
@@ -47,7 +47,7 @@
     "test:node": "npm run clean && dev-tool run build-test && npm run unit-test:node",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
     "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
-    "unit-test:node": "dev-tool run test:vitest",
+    "unit-test:node": "dev-tool run test:vitest -- --test-timeout 180000",
     "update-snippets": "echo skipped"
   },
   "engines": {
