--- a/sdk/identity/identity-broker/package.json
+++ b/sdk/identity/identity-broker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/identity-broker",
-  "version": "1.1.0-beta.1",
+  "version": "1.1.0",
   "sdk-type": "client",
   "description": "A native plugin for Azure Identity credentials to enable broker authentication such as WAM",
   "main": "dist/index.js",
@@ -59,10 +59,10 @@
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/identity/identity-broker/README.md",
   "sideEffects": false,
   "dependencies": {
-    "@azure/core-auth": "^1.8.0",
-    "@azure/identity": "^4.5.0-beta.3",
-    "@azure/msal-node-extensions": "^1.1.0",
-    "@azure/msal-node": "^2.13.1",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/identity": "^4.5.0",
+    "@azure/msal-node-extensions": "^1.3.0",
+    "@azure/msal-node": "^2.15.0",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
