--- a/sdk/eventhub/eventhubs-checkpointstore-blob/package.json
+++ b/sdk/eventhub/eventhubs-checkpointstore-blob/package.json
@@ -72,7 +72,7 @@
   "dependencies": {
     "@azure/abort-controller": "^2.1.2",
     "@azure/core-paging": "^1.6.2",
-    "@azure/event-hubs": "5.13.0-beta.3",
+    "@azure/event-hubs": "^5.13.0",
     "@azure/logger": "^1.1.3",
     "@azure/storage-blob": "^12.24.0",
     "tslib": "^2.6.3"
