--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "pnpm": "^9.0.0"
   },
   "scripts": {
-    "build": "pnpm -r --workspace-concurrency=Infinity --aggregate-output --reporter=append-only build",
+    "build": "pnpm -r --aggregate-output --reporter=append-only build",
     "clean": "pnpm -r run clean",
+    "cspell": "cspell --no-progress .",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "format:dir": "prettier --write",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "purge": "rimraf --glob \"sdk/**/node_modules/\""
   },
   "devDependencies": {
-    "@vitest/browser": "^2.0.5",
-    "@vitest/coverage-istanbul": "^2.0.5",
+    "@vitest/browser": "^2.1.2",
+    "@vitest/coverage-istanbul": "^2.1.2",
+    "cspell": "^8.14.4",
     "prettier": "^3.3.3",
-    "rimraf": "^5.0.5",
-    "tsx": "^4.17.0",
+    "rimraf": "^5.0.10",
+    "tsx": "^4.19.1",
     "typescript": "~5.5.4",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.2"
   }
 }
