[keyvault-keys] Migrate to ESM and tshy (#31332)
### Packages impacted by this PR

@azure/keyvault-keys

### Issues associated with this PR

Resolves #30822 

### Describe the problem that is addressed by this PR

Migrate keyvault-keys to ESM and tshy

--- a/sdk/keyvault/keyvault-keys/tsconfig.json
+++ b/sdk/keyvault/keyvault-keys/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
-    "declarationDir": "./types",
-    "outDir": "./dist-esm",
     "lib": ["dom"],
     "resolveJsonModule": true,
     "paths": {
       "@azure/keyvault-keys": ["./src/index"]
-    }
+    },
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "."
   },
-  "include": ["./src/**/*.ts", "./test/**/*.ts", "samples-dev/**/*.ts"]
+  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
 }
