[EngSys] Add legacy packages  ***NO_CI***

--- a/sdk/openai/openai/package.json
+++ b/sdk/openai/openai/package.json
@@ -108,7 +108,7 @@
     "@azure-tools/test-credential": "workspace:~",
     "@azure-tools/test-recorder": "workspace:~",
     "@azure-tools/test-utils-vitest": "workspace:~",
-    "@azure/arm-cognitiveservices": "^7.5.0",
+    "@azure/arm-cognitiveservices": "workspace:~",
     "@azure/core-rest-pipeline": "workspace:~",
     "@azure/core-util": "workspace:~",
     "@azure/dev-tool": "workspace:~",
@@ -118,7 +118,7 @@
     "@microsoft/api-extractor": "catalog:",
     "@types/node": "catalog:",
     "@vitest/browser": "catalog:",
-    "@vitest/coverage-istanbul": "^2.0.4",
+    "@vitest/coverage-istanbul": "catalog:",
     "cross-env": "catalog:",
     "dotenv": "catalog:",
     "eslint": "catalog:",
