--- a/common/tools/eslint-plugin-azure-sdk/package.json
+++ b/common/tools/eslint-plugin-azure-sdk/package.json
@@ -93,13 +93,13 @@
     "@typescript-eslint/parser": "~8.2.0",
     "@typescript-eslint/rule-tester": "~8.2.0",
     "@typescript-eslint/utils": "~8.2.0",
-    "@vitest/coverage-istanbul": "catalog:",
+    "@vitest/coverage-istanbul": "^2.1.2",
     "cross-env": "^7.0.3",
-    "eslint": "catalog:",
+    "eslint": "^9.9.0",
     "eslint-plugin-markdown": "^5.0.0",
     "prettier": "^3.3.3",
-    "rimraf": "catalog:",
+    "rimraf": "^5.0.5",
     "source-map-support": "^0.5.9",
-    "vitest": "catalog:"
+    "vitest": "^2.1.2"
   }
 }
