--- a/eng/pipelines/bicep-warnings.yml
+++ b/eng/pipelines/bicep-warnings.yml
@@ -9,45 +9,51 @@ pr:
       - '**/*.bicep'
       - eng/pipelines/bicep-warnings.yml
 
-variables:
-  - template: /eng/pipelines/templates/variables/image.yml
+extends:
+  template: /eng/pipelines/templates/stages/1es-redirect.yml
+  parameters:
+    stages:
+    - stage: LintBicepFiles
+      displayName: Lint Bicep Files
 
-stages:
-  - stage: LintBicepFiles
-    displayName: Lint Bicep Files
+      variables:
+        - template: /eng/pipelines/templates/variables/image.yml
+        - name: DATE
+          value: 0
 
-    pool:
-      # AzureFileCopy requires Windows
-      name: $(WINDOWSPOOL)
-      vmImage: $(WINDOWSVMIMAGE)
+      pool:
+        # AzureFileCopy requires Windows
+        name: $(WINDOWSPOOL)
+        image: $(WINDOWSVMIMAGE)
+        os: windows
 
-    jobs:
-      - job: LintBicep
-        timeoutInMinutes: 20
-        steps:
-          - bash: |
-              az bicep install
-              find . -name '*.bicep' -exec az bicep lint --file {} \; 2>&1 | tee lint-warnings.txt
-            displayName: 'Install Bicep CLI and Lint Bicep Files'
+      jobs:
+        - job: LintBicep
+          timeoutInMinutes: 20
+          steps:
+            - bash: |
+                az bicep install
+                find . -name '*.bicep' -exec az bicep lint --file {} \; 2>&1 | tee lint-warnings.txt
+              displayName: 'Install Bicep CLI and Lint Bicep Files'
 
-          - bash: |
-              DATE=$(date +'%Y-%m-%d')
-              echo "##vso[task.setvariable variable=DATE]$DATE"
-              sed '/^$/N;/^\n$/D;' lint-warnings.txt > lint-warnings-${DATE}.txt
-            displayName: 'Rename Lint Warnings File with Date'
+            - bash: |
+                DATE=$(date +'%Y-%m-%d')
+                echo "##vso[task.setvariable variable=DATE]$DATE"
+                sed '/^$/N;/^\n$/D;' lint-warnings.txt > lint-warnings-${DATE}.txt
+              displayName: 'Rename Lint Warnings File with Date'
 
-          - task: PublishPipelineArtifact@1
-            inputs:
-              targetPath: 'lint-warnings-$(DATE).txt'
-              artifactName: 'bicep-lint-warnings-$(DATE)'
+            - task: 1ES.PublishPipelineArtifact@1
+              inputs:
+                targetPath: 'lint-warnings-$(DATE).txt'
+                artifactName: 'bicep-lint-warnings-$(DATE)'
 
-          - task: AzureFileCopy@6
-            displayName: 'Upload Bicep Lint Warnings'
-            inputs:
-              sourcePath: 'lint-warnings-$(DATE).txt'
-              azureSubscription: 'Azure SDK Artifacts'
-              destination: AzureBlob
-              storage: azuresdkartifacts
-              containerName: 'azure-sdk-for-js'
-              blobPrefix: 'bicep-lint-warnings/$(DATE)'
-              AdditionalArgumentsForBlobCopy: '--overwrite=true'
+            - task: AzureFileCopy@6
+              displayName: 'Upload Bicep Lint Warnings'
+              inputs:
+                sourcePath: 'lint-warnings-$(DATE).txt'
+                azureSubscription: 'Azure SDK Artifacts'
+                destination: AzureBlob
+                storage: azuresdkartifacts
+                containerName: 'azure-sdk-for-js'
+                blobPrefix: 'bicep-lint-warnings/$(DATE)'
+                AdditionalArgumentsForBlobCopy: '--overwrite=true'
